fix(GCC): cc -> cxx

--- a/make.config
+++ b/make.config
@@ -1,12 +1,10 @@
 TARGET=RecastCLI
 TC=
 CC=@echo "CC $@";$(TC)gcc
+CXX=@echo "CC $@";$(TC)gcc
 AR=@echo "AR $@";$(TC)ar
 
 LIBDIR=-I.
-COMMONFLAGS=-Wall -std=c99
-CFLAGS=$(COMMONFLAGS) $(LIBDIR)
-
-LIDLIBS+=-lm
+CPPFLAGS=$(LIBDIR)
 
 TARG = $(subst .cpp,.o,$(wildcard *.cpp))
