feat(LoadMesh): Milestone - Load obj file

--- a/make.config
+++ b/make.config
@@ -5,6 +5,7 @@ CXX=@echo "CC $@";$(TC)gcc
 AR=@echo "AR $@";$(TC)ar
 
 LIBDIR=-I.
-CPPFLAGS=$(LIBDIR)
+LIDLIBS=-lstdc++
+CPPFLAGS=$(LIBDIR) $(LIDLIBS)
 
 TARG = $(subst .cpp,.o,$(wildcard *.cpp))
