fix(InputGeom): Some source files is old version

--- a/make.config
+++ b/make.config
@@ -7,5 +7,6 @@ AR=@echo "AR $@";$(TC)ar
 LIBDIR=-I.
 LIDLIBS=-lstdc++
 CPPFLAGS=$(LIBDIR) $(LIDLIBS)
+CPPFLAGS+=-std=c++11
 
 TARG = $(subst .cpp,.o,$(wildcard *.cpp))
