--- a/make.config
+++ b/make.config
@@ -8,5 +8,6 @@ LIBDIR=-I.
 LIDLIBS=-lstdc++
 CPPFLAGS=$(LIBDIR) $(LIDLIBS)
 CPPFLAGS+=-std=c++11
+CPPFLAGS+=-w
 
 TARG = $(subst .cpp,.o,$(wildcard *.cpp))
