feat(test): Handle string

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "files.associations": {
         "algorithm": "cpp",
-        "atomic": "cpp"
+        "atomic": "cpp",
+        "iterator": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "vector": "cpp"
     }
 }
