compile correctly with g++ #8

--- a/make.config
+++ b/make.config
@@ -1,7 +1,7 @@
 TARGET=RecastCLI
 TC=
 CC=@echo "CC $@";$(TC)gcc
-CXX=@echo "CC $@";$(TC)gcc
+CXX=@echo "C++ $@";$(TC)g++
 AR=@echo "AR $@";$(TC)ar
 
 LIBDIR=-I.
